kubernetes/event/kafka/kafka.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kafka
  namespace: event
  labels:
    app: kafka
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kafka
  template:
    metadata:
      labels:
        app: kafka
    spec:
      volumes:
        - name: kafka-data-volume
          persistentVolumeClaim:
            claimName: kafka-data-claim
      #   - name: kafka-config-volume
      #     configMap:
      #       name: kafka-config
      #       items:
      #       - key: mosquitto.conf
      #         path: mosquitto.conf
      #       # defaultMode: 0600
      containers:
      - name: kafka
        image: bitnami/kafka
        ports:
        - name: kafka
          containerPort: 9092
        volumeMounts:
          - name: kafka-data-volume
            mountPath: /bitnami/kafka
          # - name: kafka-config-volume
          #   mountPath: /mosquitto/config/
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: kafka
  name: kafka
  namespace: event
spec:
  ports:
  - name: kafka
    targetPort: 9092
    port: 9092
  selector:
    app: kafka
  type: ClusterIP
