kubernetes/event/kafka/kafka-manager.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kafka-manager
  namespace: event
  labels:
    app: kafka-manager
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kafka-manager
  template:
    metadata:
      labels:
        app: kafka-manager
    spec:
      containers:
      - name: kafka-manager
        image: kafkamanager/kafka-manager
        # resources:
        #   limits:
        #     memory: "256Mi"
        #     cpu: "100m"
        ports:
        - name: kafka-manager
          containerPort: 9000
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: kafka-manager
  name: kafka-manager
  namespace: event
spec:
  ports:
  - name: kafka-manager
    targetPort: 9000
    port: 80
  selector:
    app: kafka-manager
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kafka-manageringress
  namespace: event
spec:
  rules:
  - host: kafka-manager.bas
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kafka-manager
            port:
              number: 80
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: kafka-manager-tls
  namespace: event
spec:
  entryPoints:
    - websecure
  routes:
  - match: Host(`kafka-manager.bas`) && PathPrefix(`/`)
    kind: Rule
    services:
    - name: kafka-manager
      port: 80
  tls:
    secretName: kafka-manager-bas-tls
