kubernetes/event/kafka/kafka.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kafka
  namespace: event
  labels:
    app: kafka
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kafka
  template:
    metadata:
      labels:
        app: kafka
    spec:
      # volumes:
        # - name: kafka-data-volume
        #   persistentVolumeClaim:
        #     claimName: kafka-data-claim
      #   - name: kafka-config-volume
      #     configMap:
      #       name: kafka-config
      #       items:
      #       - key: mosquitto.conf
      #         path: mosquitto.conf
      #       # defaultMode: 0600
      containers:
      - name: kafka
        image: bitnami/kafka
        ports:
        - name: kafka
          containerPort: 9092
        - name: jmx
          containerPort: 9099
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: kafka
  name: kafka
  namespace: event
spec:
  loadBalancerIP: 192.168.6.177
  type: LoadBalancer
  ports:
  - name: kafka
    # targetPort: 9092
    protocol: TCP
    port: 9092
  - name: jmx
    # targetPort: 9092
    protocol: TCP
    port: 9099
  selector:
    app: kafka




---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: eventingress
  namespace: event
spec:
  rules:
  - host: event.bas
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kafka
            port:
              number: 9092
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: event-tls
  namespace: event
spec:
  entryPoints:
    - websecure
  routes:
  - match: Host(`event.bas`) && PathPrefix(`/`)
    kind: Rule
    services:
    - name: event
      port: 80
  tls:
    secretName: event-bas-tls
